fixed ugly gap between the menu and the top bars on the reports page
this was due some margin set on the header id. better to use padding

--- a/application/views/themes/default/reports/css/reports.css
+++ b/application/views/themes/default/reports/css/reports.css
@@ -136,6 +136,7 @@ caption { padding-left:0px}
 #header {
 	position: relative;
 	top: 0px;
+	padding-top: 14px;
 }
 
 #header p {
